antlr/LuaParser.py
# Generated from LuaParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LuaParser ( Parser ):

    grammarFileName = "LuaParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'break'", "'goto'", "'do'", "'while'", 
                     "'end'", "'repeat'", "'until'", "'for'", "'function'", 
                     "'local'", "'if'", "'then'", "'elseif'", "'else'", 
                     "'return'", "':'", "'::'", "'.'", "','", "'in'", "'('", 
                     "')'", "'['", "']'", "'{'", "'}'", "'or'", "'and'", 
                     "'<'", "'>'", "'<='", "'>='", "'~='", "'=='", "'='", 
                     "'..'", "'+'", "'-'", "'*'", "'/'", "'%'", "'//'", 
                     "'&'", "'|'", "'~'", "'<<'", "'>>'", "'not'", "'#'", 
                     "'^'", "'nil'", "'false'", "'true'", "'...'" ]

    symbolicNames = [ "<INVALID>", "SEMICOLON", "BREAK", "GOTO", "DO", "WHILE", 
                      "END", "REPEAT", "UNTIL", "FOR", "FUNCTION", "LOCAL", 
                      "IF", "THEN", "ELSEIF", "ELSE", "RETURN", "COLON", 
                      "DCOLON", "DOT", "COMMA", "IN", "LPAREN", "RPAREN", 
                      "LBRACK", "RBRACK", "LBRACE", "RBRACE", "OR", "AND", 
                      "LT", "GT", "LTE", "GTE", "NEQ", "EQ", "EQUALS", "STRCAT", 
                      "PLUS", "MINUS", "MUL", "DIV", "MOD", "DIVFLOOR", 
                      "BITAND", "BITOR", "BITNOT", "BITSHL", "BITSHR", "NOT", 
                      "LEN", "POWER", "NIL", "FALSE", "TRUE", "DOTS", "NAME", 
                      "NORMALSTRING", "CHARSTRING", "LONGSTRING", "INT", 
                      "HEX", "FLOAT", "HEX_FLOAT", "COMMENT", "LINE_COMMENT", 
                      "WS", "SHEBANG" ]

    RULE_chunk = 0
    RULE_block = 1
    RULE_stat = 2
    RULE_breakstat = 3
    RULE_gotostat = 4
    RULE_dostat = 5
    RULE_whilestat = 6
    RULE_repeatstat = 7
    RULE_ifstat = 8
    RULE_genericforstat = 9
    RULE_numericforstat = 10
    RULE_functionstat = 11
    RULE_localfunctionstat = 12
    RULE_localvariablestat = 13
    RULE_variablestat = 14
    RULE_attnamelist = 15
    RULE_attrib = 16
    RULE_retstat = 17
    RULE_label = 18
    RULE_funcname = 19
    RULE_variablelist = 20
    RULE_namelist = 21
    RULE_explist = 22
    RULE_exp = 23
    RULE_variable = 24
    RULE_nameAndArgs = 25
    RULE_args = 26
    RULE_functiondef = 27
    RULE_funcbody = 28
    RULE_parlist = 29
    RULE_tableconstructor = 30
    RULE_fieldlist = 31
    RULE_field = 32
    RULE_fieldsep = 33
    RULE_operatorOr = 34
    RULE_operatorAnd = 35
    RULE_operatorComparison = 36
    RULE_operatorStrcat = 37
    RULE_operatorAddSub = 38
    RULE_operatorMulDivMod = 39
    RULE_operatorBitwise = 40
    RULE_operatorUnary = 41
    RULE_operatorPower = 42
    RULE_number = 43
    RULE_lstring = 44

    ruleNames =  [ "chunk", "block", "stat", "breakstat", "gotostat", "dostat", 
                   "whilestat", "repeatstat", "ifstat", "genericforstat", 
                   "numericforstat", "functionstat", "localfunctionstat", 
                   "localvariablestat", "variablestat", "attnamelist", "attrib", 
                   "retstat", "label", "funcname", "variablelist", "namelist", 
                   "explist", "exp", "variable", "nameAndArgs", "args", 
                   "functiondef", "funcbody", "parlist", "tableconstructor", 
                   "fieldlist", "field", "fieldsep", "operatorOr", "operatorAnd", 
                   "operatorComparison", "operatorStrcat", "operatorAddSub", 
                   "operatorMulDivMod", "operatorBitwise", "operatorUnary", 
                   "operatorPower", "number", "lstring" ]

    EOF = Token.EOF
    SEMICOLON=1
    BREAK=2
    GOTO=3
    DO=4
    WHILE=5
    END=6
    REPEAT=7
    UNTIL=8
    FOR=9
    FUNCTION=10
    LOCAL=11
    IF=12
    THEN=13
    ELSEIF=14
    ELSE=15
    RETURN=16
    COLON=17
    DCOLON=18
    DOT=19
    COMMA=20
    IN=21
    LPAREN=22
    RPAREN=23
    LBRACK=24
    RBRACK=25
    LBRACE=26
    RBRACE=27
    OR=28
    AND=29
    LT=30
    GT=31
    LTE=32
    GTE=33
    NEQ=34
    EQ=35
    EQUALS=36
    STRCAT=37
    PLUS=38
    MINUS=39
    MUL=40
    DIV=41
    MOD=42
    DIVFLOOR=43
    BITAND=44
    BITOR=45
    BITNOT=46
    BITSHL=47
    BITSHR=48
    NOT=49
    LEN=50
    POWER=51
    NIL=52
    FALSE=53
    TRUE=54
    DOTS=55
    NAME=56
    NORMALSTRING=57
    CHARSTRING=58
    LONGSTRING=59
    INT=60
    HEX=61
    FLOAT=62
    HEX_FLOAT=63
    COMMENT=64
    LINE_COMMENT=65
    WS=66
    SHEBANG=67

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ChunkContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)


        def EOF(self):
            return self.getToken(LuaParser.EOF, 0)

        def getRuleIndex(self):
            return LuaParser.RULE_chunk

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChunk" ):
                listener.enterChunk(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChunk" ):
                listener.exitChunk(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChunk" ):
                return visitor.visitChunk(self)
            else:
                return visitor.visitChildren(self)




    def chunk(self):

        localctx = LuaParser.ChunkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_chunk)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.block()
            self.state = 91
            self.match(LuaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.StatContext)
            else:
                return self.getTypedRuleContext(LuaParser.StatContext,i)


        def retstat(self):
            return self.getTypedRuleContext(LuaParser.RetstatContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = LuaParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 72057594042392254) != 0):
                self.state = 93
                self.stat()
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==16:
                self.state = 99
                self.retstat()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(LuaParser.SEMICOLON, 0)

        def variablestat(self):
            return self.getTypedRuleContext(LuaParser.VariablestatContext,0)


        def variable(self):
            return self.getTypedRuleContext(LuaParser.VariableContext,0)


        def label(self):
            return self.getTypedRuleContext(LuaParser.LabelContext,0)


        def breakstat(self):
            return self.getTypedRuleContext(LuaParser.BreakstatContext,0)


        def gotostat(self):
            return self.getTypedRuleContext(LuaParser.GotostatContext,0)


        def dostat(self):
            return self.getTypedRuleContext(LuaParser.DostatContext,0)


        def whilestat(self):
            return self.getTypedRuleContext(LuaParser.WhilestatContext,0)


        def repeatstat(self):
            return self.getTypedRuleContext(LuaParser.RepeatstatContext,0)


        def ifstat(self):
            return self.getTypedRuleContext(LuaParser.IfstatContext,0)


        def numericforstat(self):
            return self.getTypedRuleContext(LuaParser.NumericforstatContext,0)


        def genericforstat(self):
            return self.getTypedRuleContext(LuaParser.GenericforstatContext,0)


        def functionstat(self):
            return self.getTypedRuleContext(LuaParser.FunctionstatContext,0)


        def localfunctionstat(self):
            return self.getTypedRuleContext(LuaParser.LocalfunctionstatContext,0)


        def localvariablestat(self):
            return self.getTypedRuleContext(LuaParser.LocalvariablestatContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = LuaParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stat)
        try:
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.match(LuaParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.variablestat()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 104
                self.variable(0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 105
                self.label()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 106
                self.breakstat()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 107
                self.gotostat()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 108
                self.dostat()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 109
                self.whilestat()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 110
                self.repeatstat()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 111
                self.ifstat()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 112
                self.numericforstat()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 113
                self.genericforstat()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 114
                self.functionstat()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 115
                self.localfunctionstat()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 116
                self.localvariablestat()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BreakstatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(LuaParser.BREAK, 0)

        def getRuleIndex(self):
            return LuaParser.RULE_breakstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreakstat" ):
                listener.enterBreakstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreakstat" ):
                listener.exitBreakstat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreakstat" ):
                return visitor.visitBreakstat(self)
            else:
                return visitor.visitChildren(self)




    def breakstat(self):

        localctx = LuaParser.BreakstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_breakstat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(LuaParser.BREAK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GotostatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GOTO(self):
            return self.getToken(LuaParser.GOTO, 0)

        def NAME(self):
            return self.getToken(LuaParser.NAME, 0)

        def getRuleIndex(self):
            return LuaParser.RULE_gotostat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGotostat" ):
                listener.enterGotostat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGotostat" ):
                listener.exitGotostat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGotostat" ):
                return visitor.visitGotostat(self)
            else:
                return visitor.visitChildren(self)




    def gotostat(self):

        localctx = LuaParser.GotostatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_gotostat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(LuaParser.GOTO)
            self.state = 122
            self.match(LuaParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DostatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DO(self):
            return self.getToken(LuaParser.DO, 0)

        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)


        def END(self):
            return self.getToken(LuaParser.END, 0)

        def getRuleIndex(self):
            return LuaParser.RULE_dostat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDostat" ):
                listener.enterDostat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDostat" ):
                listener.exitDostat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDostat" ):
                return visitor.visitDostat(self)
            else:
                return visitor.visitChildren(self)




    def dostat(self):

        localctx = LuaParser.DostatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_dostat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(LuaParser.DO)
            self.state = 125
            self.block()
            self.state = 126
            self.match(LuaParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhilestatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(LuaParser.WHILE, 0)

        def exp(self):
            return self.getTypedRuleContext(LuaParser.ExpContext,0)


        def DO(self):
            return self.getToken(LuaParser.DO, 0)

        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)


        def END(self):
            return self.getToken(LuaParser.END, 0)

        def getRuleIndex(self):
            return LuaParser.RULE_whilestat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhilestat" ):
                listener.enterWhilestat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhilestat" ):
                listener.exitWhilestat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhilestat" ):
                return visitor.visitWhilestat(self)
            else:
                return visitor.visitChildren(self)




    def whilestat(self):

        localctx = LuaParser.WhilestatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_whilestat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(LuaParser.WHILE)
            self.state = 129
            self.exp(0)
            self.state = 130
            self.match(LuaParser.DO)
            self.state = 131
            self.block()
            self.state = 132
            self.match(LuaParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RepeatstatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REPEAT(self):
            return self.getToken(LuaParser.REPEAT, 0)

        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)


        def UNTIL(self):
            return self.getToken(LuaParser.UNTIL, 0)

        def exp(self):
            return self.getTypedRuleContext(LuaParser.ExpContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_repeatstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRepeatstat" ):
                listener.enterRepeatstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRepeatstat" ):
                listener.exitRepeatstat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRepeatstat" ):
                return visitor.visitRepeatstat(self)
            else:
                return visitor.visitChildren(self)




    def repeatstat(self):

        localctx = LuaParser.RepeatstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_repeatstat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(LuaParser.REPEAT)
            self.state = 135
            self.block()
            self.state = 136
            self.match(LuaParser.UNTIL)
            self.state = 137
            self.exp(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfstatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(LuaParser.IF, 0)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.ExpContext)
            else:
                return self.getTypedRuleContext(LuaParser.ExpContext,i)


        def THEN(self, i:int=None):
            if i is None:
                return self.getTokens(LuaParser.THEN)
            else:
                return self.getToken(LuaParser.THEN, i)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.BlockContext)
            else:
                return self.getTypedRuleContext(LuaParser.BlockContext,i)


        def END(self):
            return self.getToken(LuaParser.END, 0)

        def ELSEIF(self, i:int=None):
            if i is None:
                return self.getTokens(LuaParser.ELSEIF)
            else:
                return self.getToken(LuaParser.ELSEIF, i)

        def ELSE(self):
            return self.getToken(LuaParser.ELSE, 0)

        def getRuleIndex(self):
            return LuaParser.RULE_ifstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfstat" ):
                listener.enterIfstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfstat" ):
                listener.exitIfstat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfstat" ):
                return visitor.visitIfstat(self)
            else:
                return visitor.visitChildren(self)




    def ifstat(self):

        localctx = LuaParser.IfstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_ifstat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(LuaParser.IF)
            self.state = 140
            self.exp(0)
            self.state = 141
            self.match(LuaParser.THEN)
            self.state = 142
            self.block()
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 143
                self.match(LuaParser.ELSEIF)
                self.state = 144
                self.exp(0)
                self.state = 145
                self.match(LuaParser.THEN)
                self.state = 146
                self.block()
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15:
                self.state = 153
                self.match(LuaParser.ELSE)
                self.state = 154
                self.block()


            self.state = 157
            self.match(LuaParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GenericforstatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(LuaParser.FOR, 0)

        def namelist(self):
            return self.getTypedRuleContext(LuaParser.NamelistContext,0)


        def IN(self):
            return self.getToken(LuaParser.IN, 0)

        def explist(self):
            return self.getTypedRuleContext(LuaParser.ExplistContext,0)


        def DO(self):
            return self.getToken(LuaParser.DO, 0)

        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)


        def END(self):
            return self.getToken(LuaParser.END, 0)

        def getRuleIndex(self):
            return LuaParser.RULE_genericforstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGenericforstat" ):
                listener.enterGenericforstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGenericforstat" ):
                listener.exitGenericforstat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGenericforstat" ):
                return visitor.visitGenericforstat(self)
            else:
                return visitor.visitChildren(self)




    def genericforstat(self):

        localctx = LuaParser.GenericforstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_genericforstat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(LuaParser.FOR)
            self.state = 160
            self.namelist()
            self.state = 161
            self.match(LuaParser.IN)
            self.state = 162
            self.explist()
            self.state = 163
            self.match(LuaParser.DO)
            self.state = 164
            self.block()
            self.state = 165
            self.match(LuaParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumericforstatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(LuaParser.FOR, 0)

        def NAME(self):
            return self.getToken(LuaParser.NAME, 0)

        def EQUALS(self):
            return self.getToken(LuaParser.EQUALS, 0)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.ExpContext)
            else:
                return self.getTypedRuleContext(LuaParser.ExpContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(LuaParser.COMMA)
            else:
                return self.getToken(LuaParser.COMMA, i)

        def DO(self):
            return self.getToken(LuaParser.DO, 0)

        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)


        def END(self):
            return self.getToken(LuaParser.END, 0)

        def getRuleIndex(self):
            return LuaParser.RULE_numericforstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumericforstat" ):
                listener.enterNumericforstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumericforstat" ):
                listener.exitNumericforstat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumericforstat" ):
                return visitor.visitNumericforstat(self)
            else:
                return visitor.visitChildren(self)




    def numericforstat(self):

        localctx = LuaParser.NumericforstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_numericforstat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.match(LuaParser.FOR)
            self.state = 168
            self.match(LuaParser.NAME)
            self.state = 169
            self.match(LuaParser.EQUALS)
            self.state = 170
            self.exp(0)
            self.state = 171
            self.match(LuaParser.COMMA)
            self.state = 172
            self.exp(0)
            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 173
                self.match(LuaParser.COMMA)
                self.state = 174
                self.exp(0)


            self.state = 177
            self.match(LuaParser.DO)
            self.state = 178
            self.block()
            self.state = 179
            self.match(LuaParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionstatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(LuaParser.FUNCTION, 0)

        def funcname(self):
            return self.getTypedRuleContext(LuaParser.FuncnameContext,0)


        def funcbody(self):
            return self.getTypedRuleContext(LuaParser.FuncbodyContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_functionstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionstat" ):
                listener.enterFunctionstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionstat" ):
                listener.exitFunctionstat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionstat" ):
                return visitor.visitFunctionstat(self)
            else:
                return visitor.visitChildren(self)




    def functionstat(self):

        localctx = LuaParser.FunctionstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_functionstat)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self.match(LuaParser.FUNCTION)
            self.state = 182
            self.funcname()
            self.state = 183
            self.funcbody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LocalfunctionstatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LOCAL(self):
            return self.getToken(LuaParser.LOCAL, 0)

        def FUNCTION(self):
            return self.getToken(LuaParser.FUNCTION, 0)

        def NAME(self):
            return self.getToken(LuaParser.NAME, 0)

        def funcbody(self):
            return self.getTypedRuleContext(LuaParser.FuncbodyContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_localfunctionstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLocalfunctionstat" ):
                listener.enterLocalfunctionstat(self)
